Делаю разметку чекбоксам

--- a/catalog.html
+++ b/catalog.html
@@ -116,21 +116,27 @@
                 <span class="section-separator"></span>
                 <fieldset class="mp-null">
                   <legend class="second-legend">Производители:</legend>
-                  <div class="manufactures">
-                    <div class="manufactures-input">
-                      <input id="bosch" type="checkbox" name="bosch" value="">
-                      <input id="interskol" type="checkbox" name="interskol" value="">
-                      <input id="makita" type="checkbox" name="makita" value="">
-                      <input id="dewalt" type="checkbox" name="dewalt" value="">
-                      <input id="hitachi" type="checkbox" name="hitachi" value="">
-                    </div>
-                    <div class="manufactures-label">
-                      <label for="bosch">BOSCH</label>
-                      <label for="interskol">Интерскол</label>
-                      <label for="makita">Makita</label>
-                      <label for="dewalt">Dewalt</label>
-                      <label for="hitachi">Hitachi</label>
-                    </div>
+                  <div class="manufacturers">
+                    <label>
+                      <input type="checkbox" name="bosch">
+                      BOSCH
+                    </label>
+                    <label>
+                      <input type="checkbox" name="interskol">
+                      Интерскол
+                    </label>
+                    <label>
+                      <input type="checkbox" name="makita">
+                      Makita
+                    </label>
+                    <label>
+                      <input type="checkbox" name="dewalt">
+                      Dewalt
+                    </label>
+                    <label>
+                      <input type="checkbox" name="hitachi">
+                      Hitachi
+                    </label>
                   </div>
                 </fieldset>
                 <span class="section-separator"></span>
