Подправил разметку чекбоксов

--- a/catalog.html
+++ b/catalog.html
@@ -117,24 +117,24 @@
                 <fieldset class="mp-null">
                   <legend class="second-legend">Производители:</legend>
                   <div class="manufacturers">
-                    <label>
-                      <input type="checkbox" name="bosch">
+                    <label class="check">
+                      <input class="check-input" type="checkbox" name="bosch">
                       BOSCH
                     </label>
-                    <label>
-                      <input type="checkbox" name="interskol">
+                    <label class="check">
+                      <input class="check-input" type="checkbox" name="interskol">
                       Интерскол
                     </label>
-                    <label>
-                      <input type="checkbox" name="makita">
+                    <label class="check">
+                      <input class="check-input" type="checkbox" name="makita">
                       Makita
                     </label>
-                    <label>
-                      <input type="checkbox" name="dewalt">
+                    <label class="check">
+                      <input class="check-input" type="checkbox" name="dewalt">
                       Dewalt
                     </label>
-                    <label>
-                      <input type="checkbox" name="hitachi">
+                    <label class="check">
+                      <input class="check-input" type="checkbox" name="hitachi">
                       Hitachi
                     </label>
                   </div>
