Сделал кастомные чекбоксы

--- a/catalog.html
+++ b/catalog.html
@@ -118,23 +118,28 @@
                   <legend class="second-legend">Производители:</legend>
                   <div class="manufacturers">
                     <label class="check">
-                      <input class="check-input" type="checkbox" name="bosch">
+                      <input class="check-input" type="checkbox" name="bosch" checked>
+                      <span class="check-box"></span>
                       BOSCH
                     </label>
                     <label class="check">
                       <input class="check-input" type="checkbox" name="interskol">
+                      <span class="check-box"></span>
                       Интерскол
                     </label>
                     <label class="check">
-                      <input class="check-input" type="checkbox" name="makita">
+                      <input class="check-input" type="checkbox" name="makita" checked>
+                      <span class="check-box"></span>
                       Makita
                     </label>
                     <label class="check">
                       <input class="check-input" type="checkbox" name="dewalt">
+                      <span class="check-box"></span>
                       Dewalt
                     </label>
                     <label class="check">
-                      <input class="check-input" type="checkbox" name="hitachi">
+                      <input class="check-input" type="checkbox" name="hitachi" disabled>
+                      <span class="check-box"></span>
                       Hitachi
                     </label>
                   </div>
