--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
       </div>
     </div>
       <section class="container catalog">
-        <div class="section-header">
+        <div class="section-header m-bottom-10">
           <h2>Популярные товары</h2>
           <a href="#" class="section-header-btn">Все популярные товары</a>
         </div>
-        <ul>
+        <ul class="p-left-null">
           <li>
             <a href="#"><img src="img/bosch-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000"></a>
             <h3>
@@ -162,7 +162,7 @@
           </li>
         </ul>
       </section>
-      <section class="container popular-manufaturers m-bottom-60">
+      <section class="container popular-manufaturers m-bottom-60 m-top-10">
         <div class="section-header">
           <h2>Популярные производители</h2>
           <a href="#" class="section-header-btn">Все производители</a>
